# Cheetah-Software

./: .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/: cppTypes.h
common/include/ControlParameters/: RobotParameters.h  SimulatorParameters.h
common/include/Controllers/: DesiredStateCommand.h  LegController.h  StateEstimatorContainer.h
common/include/Dynamics/: A1.h
common/include/SimUtilities/: HighCmd.h  IMUTypes.h
common/include/Utilities/: CalculateRollPitchYaw.h  pseudoInverse.h
common/src/Controllers/: DesiredStateCommand.cpp  LegController.cpp  OrientationEstimator.cpp  PositionVelocityEstimator.cpp
common/src/Dynamics/: Quadruped.cpp
config/: a1-defaults.yaml  a1-jpos-user-parameters.yaml  a1-mit-ctrl-user-parameters.yaml  default-terrain.yaml  mini-cheetah-defaults.yaml
lcm-types/: custom_cmd_lcmt.lcm  locomotion_status_lcmt.lcm
rc_test/: CMakeLists.txt
robot/: CMakeLists.txt
robot/include/: A1hardwareBridge.h  HardwareBridge.h  RobotController.h  RobotRunner.h  RobotRunner_sim.h  SimulationBridge.h
robot/include/rt/: rt_rc_interface.h
robot/src/: A1hardwareBridge.cpp  HardwareBridge.cpp  RobotRunner.cpp  RobotRunner_sim.cpp  SimulationBridge.cpp  main_helper.cpp
robot/src/rt/: rt_rc_interface.cpp
scripts/: ipconfig.sh
sim/: CMakeLists.txt
sim/include/: DrawList.h  Graphics3D.h  Simulation.h
sim/src/: DrawList.cpp  Graphics3D.cpp  RobotInterface.cpp  SimControlPanel.cpp  SimControlPanel.ui  Simulation.cpp
user/: CMakeLists.txt
user/A1JPos_Controller/: A1JPosUserParameters.h  A1JPos_Controller.cpp  A1JPos_Controller.hpp  CMakeLists.txt  main.cpp
user/Example_Leg_InvDyn/: CMakeLists.txt
user/JPos_Controller/: CMakeLists.txt
user/MIT_Controller/: CMakeLists.txt
user/MIT_Controller/Controllers/BackFlip/: DataReader.cpp
user/MIT_Controller/Controllers/WBC_Ctrl/: WBC_Ctrl.cpp
user/MIT_Controller/Controllers/convexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  RobotState.cpp  RobotState.h
user/MIT_Controller/FSM_States/: ControlFSM.cpp  ControlFSM.h  FSM_State.cpp  FSM_State_BalanceStand.cpp  FSM_State_Locomotion.cpp  FSM_State_RecoveryStand.cpp  FSM_State_RecoveryStand.h  FSM_State_StandUp.cpp  SafetyChecker.cpp
user/MiniCheetahSpi_Controller/: CMakeLists.txt
